Add example upload, download
