# doc/swagger.yml
@@ -23,6 +23,51 @@ tags:
     description: System namespace
 
 paths:
+  /system/upload:
+    post:
+      tags:
+        - System
+      summary: Faz upload de arquivos.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - file
+              properties:
+                file:
+                  type: string
+      responses:
+        200: # status code
+          description: Cadastro de contatos.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
+        400: # status code
+          $ref: "#/components/responses/badRequest"
+        500: # status code
+          $ref: "#/components/responses/internal"
+                
+  /system/download:
+    get:
+      tags:
+        - System
+      summary: Download de zip.
+      responses:
+        200: # status code
+          description: Download de zip.
+          content:
+            application/json:
+              schema:
+                type: string
+                example: "OK"
+        500: # status code
+          $ref: "#/components/responses/internal"
+                
   /system/healthcheck:
     get:
       tags:
@@ -36,6 +81,8 @@ paths:
               schema:
                 type: string
                 example: "OK"
+        500: # status code
+          $ref: "#/components/responses/internal"
 
   /system/metrics:
     get:
@@ -49,6 +96,8 @@ paths:
             application/json:
               schema:
                 type: string
+        500: # status code
+          $ref: "#/components/responses/internal"
 
   /contato/amqp:
     post:
